CRUD operations correction
