# schemas/taskSchemas.js
@@ -5,7 +5,7 @@ export const createTaskSchema = Joi.object({
   description: Joi.string().required(),
   labelColor: Joi.string().required(),
   deadline: Joi.date().required(),
-  priority: Joi.string().required(),
+  priority: Joi.string().valid("Without", "Low", "Medium", "High").required(),
 });
 
 export const updateTaskSchema = Joi.object({
@@ -13,7 +13,13 @@ export const updateTaskSchema = Joi.object({
   description: Joi.string(),
   labelColor: Joi.string(),
   deadline: Joi.date(),
-  priority: Joi.string(),
+  priority: Joi.string().valid("Without", "Low", "Medium", "High"),
 })
   .min(1)
   .messages({ "object.min": "Body must have at least one field" });
+
+const objectIdRegex = /^[0-9a-fA-F]{24}$/;
+
+export const changeTaskOwnerSchema = Joi.object({
+  owner: Joi.string().regex(objectIdRegex).required(),
+});
